# soroban-core

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: auto-tag.yml  pr.yml  release.yml
contracts/: arch.md  static-analysis.md  stride.md  testnet-readiness.md  tests.md
contracts/channel-auth/: Cargo.toml
contracts/channel-auth/src/: contract.rs  lib.rs
contracts/channel-auth/src/tests/: events.rs  mod.rs  tests.rs
contracts/privacy-channel/: Cargo.toml
contracts/privacy-channel/src/: contract.rs  lib.rs  storage.rs  transact.rs  treasury.rs
contracts/privacy-channel/src/test/: channel_operation_builder.rs  mod.rs  moon01.rs  moon05.rs  moon06.rs  test.rs
contracts/privacy-pool/: Cargo.toml  README.md  makefile
contracts/privacy-pool/src/: contract.rs  lib.rs  storage.rs  treasury.rs
contracts/privacy-pool/src/tests/: delegated_bal_test.rs  delegated_utxo_test.rs  deposit_withdraw_test.rs  helpers.rs  mod.rs  providers_management_test.rs
contracts/privacy-pool/src/tests/no_utxo_events/: deposit_withdraw_test.rs  mod.rs
contracts/token/: Cargo.toml
contracts/token/src/: contract.rs  lib.rs  test.rs
contracts/utxo-auth/: Cargo.toml
contracts/utxo-auth/src/: contract.rs  lib.rs  payload.rs  signature.rs
contracts/utxo-auth/src/tests/: deposit_withdraw_test.rs  helpers.rs  mod.rs  tests.rs
modules/auth/: Cargo.toml
modules/auth/src/: core.rs  lib.rs  test.rs
modules/auth/src/testutils/: contract.rs
modules/errors/: Cargo.toml
modules/errors/src/: lib.rs  test.rs
modules/helpers/: Cargo.toml
modules/helpers/src/: lib.rs  parser.rs  tests.rs
modules/helpers/src/testutils/: keys.rs  mod.rs  snapshot.json  snapshot.rs
modules/primitives/: Cargo.toml
modules/primitives/src/: lib.rs
modules/provider-management/: Cargo.toml  README.md
modules/provider-management/src/: core.rs  lib.rs
modules/provider-management/src/tests/: core_test.rs  helpers.rs  mod.rs
modules/signature/: Cargo.toml
modules/signature/src/: lib.rs
modules/storage/: Cargo.toml  README.md
modules/storage/src/: cache.rs  drawer.rs  lib.rs  simple.rs  test.rs
modules/utxo/: Cargo.toml  README.md  makefile
modules/utxo-core/: Cargo.toml  makefile
modules/utxo-core/src/: core.rs  events.rs  lib.rs  macros.rs  utxo_bundle.rs
modules/utxo-core/src/tests/: bundle_long_test.rs  burn_batch_test.rs  burn_test.rs  delegated_bundle_test.rs  helpers.rs  macro_events_test.rs  mint_test.rs  mod.rs  test.rs
modules/utxo-core/src/testutils/: contract.rs  mod.rs  operation_bundle.rs
modules/utxo/src/: core.rs  lib.rs  utxo.rs
modules/utxo/src/tests/: bundle_long_test.rs  bundle_test.rs  burn_batch_test.rs  burn_test.rs  custom_bundle_transfer_test.rs  delegated_bundle_test.rs  helpers.rs  mint_batch_test.rs  mod.rs
