[workspace]
members = [
  "modules/utxo",
  "modules/provider-management",
  "contracts/*",
]
resolver = "2"

[workspace.package]
authors = ["Moonlight"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Moonlight-Protocol/soroban-core"
version = "0.0.1"

[workspace.dependencies.soroban-sdk]
version = "22.0.8"

[workspace.dependencies.soroban-token-sdk]
version = "22.0.8"




[workspace.dependencies.stellar-default-impl-macro]
git = "https://github.com/OpenZeppelin/stellar-contracts"
tag = "v0.3.0"

[workspace.dependencies]
utxo = { path = "modules/utxo" }
provider-management = { path = "modules/provider-management" }


[profile.release]
opt-level = "z"
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = true

[profile.release-with-logs]
debug-assertions = true
inherits = "release"

[profile.test]
overflow-checks = true

