[workspace]
members = [
  "modules/*",
  "contracts/*",
]
default-members = [
  "modules/*",
  "contracts/privacy-channel",
  "contracts/channel-auth",
]
resolver = "2"



[workspace.package]
authors = ["Moonlight"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Moonlight-Protocol/soroban-core"
version = "0.0.1"


[workspace.dependencies.stellar-default-impl-macro]
git = "https://github.com/OpenZeppelin/stellar-contracts"
tag = "v0.3.0"

[workspace.dependencies]
soroban-sdk = { git = "https://github.com/AhaLabs/rs-soroban-sdk", rev = "5a99659f1483c926ff87ea45f8823b8c00dc4cbd" }
admin-sep = { git = "https://github.com/AhaLabs/admin-sep", rev = "bf195f4d67cc96587974212f998680ccf9a61cd7" }
soroban-token-sdk = { git = "https://github.com/AhaLabs/rs-soroban-sdk", rev = "5a99659f1483c926ff87ea45f8823b8c00dc4cbd" }
wee_alloc = "0.4"

moonlight-utxo-core = { path = "modules/utxo-core" }
moonlight-auth = { path = "modules/auth" }
moonlight-helpers = { path = "modules/helpers" }
moonlight-primitives = { path = "modules/primitives" }
moonlight-storage = { path = "modules/storage" }

channel-auth-contract = { path = "contracts/channel-auth" }
token-contract = { path = "contracts/token" }

[profile.release]
opt-level = "z"
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = true

[profile.release-with-logs]
debug-assertions = true
inherits = "release"

[profile.test]
overflow-checks = true

