[workspace]
members = [
  "modules/*",
  "contracts/*",
]
default-members = [
  "modules/*",
  "contracts/privacy-channel",
  "contracts/channel-auth",
]
resolver = "2"

[workspace.package]
authors = ["Moonlight"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Moonlight-Protocol/soroban-core"
version = "0.3.0"


[workspace.dependencies]
soroban-sdk = { version = "=25.3.0", features = ["alloc"] }
soroban-token-sdk = "=25.3.0"
stellar-access = "=0.7.1"
stellar-contract-utils = "=0.7.1"

moonlight-utxo-core = { path = "modules/utxo-core" }
moonlight-auth = { path = "modules/auth" }
moonlight-errors = { path = "modules/errors" }
moonlight-helpers = { path = "modules/helpers" }
moonlight-primitives = { path = "modules/primitives" }
moonlight-storage = { path = "modules/storage" }

channel-auth-contract = { path = "contracts/channel-auth" }
token-contract = { path = "contracts/token" }

[profile.release]
opt-level = "z"
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = true

[profile.release-with-logs]
debug-assertions = true
inherits = "release"

[profile.test]
overflow-checks = true
