[package]
name = "moonlight-auth"
description = "Auth Module"
version = "1.0.0"
edition = "2021"

[features]
testutils = ["soroban-sdk/testutils", "moonlight-helpers/testutils", "moonlight-utxo-core/testutils", "stellar-strkey", "admin-sep"]


[lib]
crate-type = ["rlib"]
doctest = false


[dependencies]
soroban-sdk = { workspace = true }
stellar-strkey = { version = "0.0.13", optional = true}
admin-sep  = { workspace = true, optional = true}
moonlight-helpers = { workspace = true}
moonlight-primitives = { workspace = true}

# soroban-sdk = { workspace = true }
# p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "arithmetic"],optional = true }
# elliptic-curve = { version = "0.13.5", default-features = false, optional = true }
# rand_core = { version = "0.6",optional = true }


[dev-dependencies]
soroban-sdk = { workspace = true , features = ["testutils"] }
moonlight-helpers = { workspace = true , features = ["testutils"] }
moonlight-utxo-core = { workspace = true, features = ["testutils"] }
moonlight-auth = { workspace = true, features = ["testutils"] }
# moonlight-utxo-core = { workspace = true, features = ["testutils"] }
# soroban-sdk = { workspace = true, features = ["testutils"] }
# utxo = { workspace = true, features = ["testutils"] }
# p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "arithmetic"]}
# elliptic-curve = { version = "0.13.5", default-features = false}
# rand_core = { version = "0.6"}