[package]
name = "moonlight-storage"
description = "Storage Module"
version = "1.0.0"
edition = "2021"


[lib]
crate-type = ["rlib"]
doctest = false

[features]
storage-simple = []
storage-drawer = []



[dependencies]
soroban-sdk = { git = "https://github.com/AhaLabs/rs-soroban-sdk", rev = "5a99659f1483c926ff87ea45f8823b8c00dc4cbd" }

