[package]
name = "moonlight-storage"
description = "Storage Module"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { git = "https://github.com/theahaco/rs-soroban-sdk", rev = "5a99659f1483c926ff87ea45f8823b8c00dc4cbd" }
moonlight-errors = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
