[package]
name = "moonlight-storage"
description = "Storage Module"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
moonlight-errors = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
