[package]
name = "moonlight-utxo-core"
description = "UTXO Core Module"
version = "1.0.0"
edition = "2021"

[features]
# add all and soroban with testutils
testutils = [ "soroban-sdk/testutils", "moonlight-helpers/testutils", ] 
no-utxo-events = [] # disable utxo events for cost optimization on bigger batches
no-bundle-events = [ ] # disable bundle events for cost optimization on bigger batches
default = ["storage-drawer", "no-utxo-events", "no-bundle-events"] # default features

storage-drawer = ["moonlight-storage/storage-drawer"]
storage-simple = ["moonlight-storage/storage-simple"]

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { git = "https://github.com/AhaLabs/rs-soroban-sdk", rev = "5a99659f1483c926ff87ea45f8823b8c00dc4cbd" }
moonlight-helpers = { workspace = true }
moonlight-primitives = { workspace = true }
moonlight-storage = { workspace = true }

[dev-dependencies]
soroban-sdk = { git = "https://github.com/AhaLabs/rs-soroban-sdk", rev = "5a99659f1483c926ff87ea45f8823b8c00dc4cbd", features = ["testutils"] }
moonlight-helpers = { workspace = true , features = ["testutils"] }
