[package]
name = "moonlight-utxo-core"
description = "UTXO Core Module"
version = "1.0.0"
edition = "2021"

[features]
# add all and soroban with testutils
testutils = [ "soroban-sdk/testutils", "moonlight-helpers/testutils", ] 
no-utxo-events = [] # disable utxo events for cost optimization on bigger batches
no-bundle-events = [ ] # disable bundle events for cost optimization on bigger batches
default = ["no-utxo-events", "no-bundle-events"] # default features

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
moonlight-errors = { workspace = true }
moonlight-helpers = { workspace = true }
moonlight-primitives = { workspace = true }
moonlight-storage = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
moonlight-helpers = { workspace = true , features = ["testutils"] }
