[package]
name = "utxo-handler"
description = "UTXO Module"
version = "1.0.0"
edition = "2021"

[features]
# add all and soroban with testutils
testutils = ["p256", "elliptic-curve", "rand_core", "soroban-sdk/testutils"]
no-utxo-events = [] # disable utxo events for cost optimization on bigger batches
no-delegate-events = [] # disable delegate events for cost optimization

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = { workspace = true }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "arithmetic"],optional = true }
elliptic-curve = { version = "0.13.5", default-features = false, optional = true }
rand_core = { version = "0.6",optional = true }


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
utxo-handler = { workspace = true, features = ["testutils"] }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "arithmetic"]}
elliptic-curve = { version = "0.13.5", default-features = false}
rand_core = { version = "0.6"}